--- a/.github/workflows/AzureWebApp.yml
+++ b/.github/workflows/AzureWebApp.yml
@@ -1,11 +1,9 @@
-name: .NET Core CI
-
-on: [push]
+name: Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: benhp1    # set this to your application's name
+  AZURE_WEBAPP_NAME: benhp1    # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: './Project1.Api/Project1.Api/'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '6.0.x'           # set this to the dot net version to use
+  DOTNET_VERSION: '6.0.x'        # set this to the .NET Core version to use
 
 on:
   push:
@@ -16,11 +14,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Set up .NET Core
+      - uses: actions/checkout@v2   # checkout the repo main
+
+      - name: Set up .NET Core SDK        # setup .Net Core SDK
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
@@ -32,17 +29,23 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
+      - name: Restore
+        run: |
+          cd StoreApp.Api
+          dotnet restore
       - name: Build with dotnet
-        run: dotnet build --configuration Release ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
-
+        run: |
+          cd StoreApp.Api
+          dotnet build --no-restore -c Release
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp  ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+        run: |
+          cd StoreApp.Api
+          dotnet publish --no-build -c Release -o '${{env.DOTNET_ROOT}}/myapp'
+#       - name: Upload artifact for deployment job
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: .net-app
+#           path: ${{env.DOTNET_ROOT}}/myapp
           
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -50,4 +53,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: '${{env.DOTNET_ROOT}}/myapp' 
